Add DTO projection example using Java Records