@@ -8,6 +8,7 @@ import org.hibernate.jpa.boot.spi.IntegratorProvider;
 import org.junit.Test;
 
 import javax.persistence.Tuple;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
@@ -34,7 +35,10 @@ public class JPADTOProjectionTest extends AbstractTest {
             "hibernate.integrator_provider",
             (IntegratorProvider) () -> Collections.singletonList(
                 new ClassImportIntegrator(
-                    Collections.singletonList(PostDTO.class)
+                    List.of(
+                        PostDTO.class,
+                        PostRecord.class
+                    )
                 )
             )
         );
@@ -216,5 +220,36 @@ public class JPADTOProjectionTest extends AbstractTest {
             assertEquals(1L, postDTO.getId().longValue());
             assertEquals("High-Performance Java Persistence", postDTO.getTitle());
         });
+    }
+
+    @Test
+    public void testRecord() {
+        doInJPA(entityManager -> {
+            List<PostRecord> postRecords = entityManager.createQuery("""
+                select new PostRecord(
+                    p.id,
+                    p.title
+                )
+                from Post p
+                where p.createdOn > :fromTimestamp
+                """, PostRecord.class)
+                .setParameter(
+                    "fromTimestamp",
+                    LocalDate.of(2016, 1, 1).atStartOfDay()
+                )
+                .getResultList();
+
+            assertEquals(1, postRecords.size());
+
+            PostRecord postRecord = postRecords.get(0);
+            assertEquals(1L, postRecord.id().longValue());
+            assertEquals("High-Performance Java Persistence", postRecord.title());
+        });
+    }
+
+    public static record PostRecord(
+        Number id,
+        String title
+    ) {
     }
 }
